--- a/css/styles.css
+++ b/css/styles.css
@@ -783,19 +783,24 @@ h3 {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: center;
+  margin: 0;
 }
 
 .fieldset {
+  padding: 0;
   display: flex;
   position: relative;
-  margin: 28px;
+  margin-top: 28px;
+  margin-bottom: 28px;
   border-radius: 4px;
   height: 40px;
+  max-width: 448px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .label {
   position: absolute;
-  top: -18px;
+  top: -19px;
   left: 0px;
   font-weight: 400;
   font-size: 12px;
@@ -809,13 +814,13 @@ h3 {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border: transparent;
   width: 100%;
+  outline: none;
 }
 
 .label-terms {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.17;
-  letter-spacing: 0.03em;
   color: var(--silver);
   margin-top: 20px;
   margin-bottom: 30px;
@@ -827,10 +832,40 @@ h3 {
 }
 
 .modal-icons {
-  width: 25px;
-  height: 25px;
+  width: 12px;
+  height: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 15px;
+  padding: 14px 13.5px 14px 13.5px;
+}
+
+.last-fieldset {
+  display: flex;
+  position: relative;
+  margin-top: 28px;
+  margin-bottom: 28px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.button-margin {
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+.fieldset:hover {
+  border-color: var(--blue);
+}
+
+.last-fieldset:hover {
+  border-color: var(--blue);
+}
+
+.fieldset:hover .modal-icons {
+  fill: var(--blue);
+}
+.checkbox {
+  margin-right: 7px;
+  margin-left: 17px;
 }
