--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,6 @@ menu {
   border: 0;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  cursor: pointer;
   border-radius: 4px;
   width: 200px;
   height: 50px;
@@ -504,23 +503,25 @@ h3 {
   font-size: 14px;
   text-decoration: none;
   line-height: 1.17;
-  margin-bottom: 20;
+  margin-bottom: 20px;
   justify-content: left;
+  margin-top: 12px;
 }
 
 .social-links-icon-list {
   width: 44px;
   height: 44px;
-  gap: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  margin-right: 10px;
 }
 
 .social-links-icon-list:hover,
 .social-links-icon-list:focus {
   background-color: var(--blue);
-  border-radius: 50%;
   cursor: pointer;
 }
 .social-links-list {
@@ -824,11 +825,13 @@ h3 {
   color: var(--silver);
   margin-top: 20px;
   margin-bottom: 30px;
+  letter-spacing: 0.03em;
 }
 
 .terms {
   color: var(--blue);
-  text-decoration: underline;
+  text-decoration: underline var(--blue);
+  cursor: pointer;
 }
 
 .modal-icons {
@@ -838,6 +841,15 @@ h3 {
   justify-content: center;
   align-items: center;
   padding: 14px 13.5px 14px 13.5px;
+}
+
+.input-content::placeholder {
+  font-family: roboto;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .last-fieldset {
@@ -868,4 +880,81 @@ h3 {
 .checkbox {
   margin-right: 7px;
   margin-left: 17px;
+}
+
+.subscription {
+  width: 570px;
+  height: 86px;
+  padding: 0;
+  margin-left: 78px;
+  border: none;
+  margin-top: 10px;
+}
+
+.subscription-header {
+  height: 16px;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  line-height: 1.17;
+  color: rgba(255, 255, 255, 1);
+  padding: 0;
+}
+
+.subscription-input {
+  display: flex;
+  width: 358px;
+  border-radius: 4px;
+  border-color: rgba(255, 255, 255, 0.3);
+  background-color: transparent;
+  color: var(--main-white);
+  outline: none;
+}
+
+.subscription-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
+
+.subscription-input:hover {
+  border-color: var(--blue);
+  outline-style: none;
+}
+
+.subscription-icon {
+  width: 24px;
+  height: 24px;
+  padding-left: 24px;
+}
+
+.subscription-button {
+  cursor: pointer;
+  background-color: var(--blue);
+  border-style: none;
+  border: 0;
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  padding: 0;
+  margin-left: 12px;
+}
+
+.subscription-button-text {
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--main-white);
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  height: 30px;
+  align-items: center;
+  width: 130px;
+}
+
+.subscription-form {
+  display: flex;
+  margin-top: 20px;
 }
