--- a/css/styles.css
+++ b/css/styles.css
@@ -826,6 +826,7 @@ h3 {
   margin-top: 20px;
   margin-bottom: 30px;
   letter-spacing: 0.03em;
+  padding-left: 40px;
 }
 
 .terms {
@@ -881,32 +882,43 @@ h3 {
   fill: var(--blue);
 }
 .checkbox {
-  margin-right: 7px;
-  margin-left: 17px;
-}
-
-.checkbox-icon {
-  width: 17px;
-  height: 15px;
-  position: absolute;
-  fill: blue;
-  color: blue;
-  left: -26px;
-  top: 2px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.checkbox-layout {
   position: relative;
   cursor: pointer;
 }
 
-.checkbox:checked + span svg {
-  background-color: rgba(33, 150, 243, 1);
+.checkbox-input {
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  opacity: 0;
+  cursor: pointer;
+  left: 14px;
 }
 
-.checkbox-icon:hover svg {
-  visibility: 0%;
+.checkbox-svg {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border: 1px solid (--silver);
+  border-radius: 2px;
+  display: block;
+  transition: opacity 0.2s;
+  opacity: 0;
+  left: 54px;
+}
+
+.checkbox-icon {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  background-color: var(--blue);
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.checkbox-input:checked ~ .checkbox-svg {
+  opacity: 1;
+  background-color: black;
 }
 
 .subscription {
@@ -966,7 +978,6 @@ h3 {
   border-radius: 4px;
   width: 200px;
   height: 50px;
-  text-align: center;
   padding: 0;
   margin-left: 12px;
 }
@@ -977,9 +988,9 @@ h3 {
   color: var(--main-white);
   line-height: 1.88;
   letter-spacing: 0.06em;
-  height: 30px;
   align-items: center;
-  width: 130px;
+  display: flex;
+  padding-left: 42px;
 }
 
 .subscription-form {
